--- a/views/email-sent.hbs
+++ b/views/email-sent.hbs
@@ -1,6 +1,6 @@
 <div class="container">
 
-    <h1>Email de confirmación enviado</h1>
+    <h1>Email enviado</h1>
 
     <ul>
         <li>Dirección de envío {{email}}</li>
