add cars repair view

--- a/views/cars/cars-list.hbs
+++ b/views/cars/cars-list.hbs
@@ -4,7 +4,11 @@
     <div id="myMap"></div>
 
     <h3>Lista de coches</h3>
-    <a href="/cars/create" class="btn btn-dark">Crear un coche</a>
+    <div class="car-button">
+        <a href="/cars/create" class="btn btn-dark">Crear un coche</a>
+        <a href="/cars/cars-repair" class="btn btn-dark">Reparaciones</a>
+
+    </div>
 
     <div class="container">
         <div class="row justify-content-center">
