--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -99,5 +99,21 @@ figure img{
   p{
     margin: 15px 0;
   }
-
+}
+.car-button{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 20px;
+}
+.taller-pic{
+  text-align:center;
+  margin: 20px 0;
+}
+.taller-pic img{
+  width: 100%;
+  height: 100%;
+}
+.taller-pic .taller-personal {
+  width: 300px;
 }
