--- a/views/cars/cars-create.hbs
+++ b/views/cars/cars-create.hbs
@@ -8,7 +8,7 @@
 
         <div class="col-md-6">
 
-            <form action="/cars/create" method="POST" {{!-- enctype="multipart/form-data" --}}>
+            <form action="/cars/create" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="brand-list">Marca</label>
                     <select name="brand" class="form-control" id="brand-list">
@@ -22,10 +22,10 @@
                     <label for="model-input">Modelo</label>
                     <input name="model" type="text" class="form-control" id="model-input">
                 </div>
-                {{!-- <div class="form-group">
+                <div class="form-group">
                     <label for="picture-input">Imagen</label>
                     <input name="imgPathForm" type="file" class="form-control" id="picture-input">
-                </div> --}}
+                </div>
                 <div class="form-group">
                     <label for="manufacturingYear-input">Feacha de primera matriculación</label>
                     <input name="manufacturingYear" type="month" class="form-control" id="manufacturingYear-input">
