--- a/views/cars/cars-list.hbs
+++ b/views/cars/cars-list.hbs
@@ -31,5 +31,5 @@
 {{!-- AXIOS   Y API GOOGLE MAPS    --}}
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/javascripts/main.js"></script>
-{{!-- <script src="/javascripts/mapStyles.js"> </script> --}}
+<script src="/javascripts/mapStyles.js"> </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5zll-K3WnkRdKTRaRgbyeC_JkL76ygyM"></script>
