--- a/views/forum/forum-list.hbs
+++ b/views/forum/forum-list.hbs
@@ -4,13 +4,14 @@
 <div class="container">
     <div class="row">
             {{#each allPost}}
-                <div class="col-md-4">
+                <div class="col-md-4 card">
                         <h2>Titulo: {{title}}</h2>
-                        <img class="profile" src="{{postPicPath}}" alt="{{title}}">
-                        <h4>Subtitulo: {{subtitle}}</h4>
+                        <img class="postpic" src="{{postPicPath}}" alt="{{title}}">
                         <p>Comentario: {{comment}}</p>
                         <p>Usuario: {{creatorId.username}}</p>
-                        <a href="/forum/edit/{{_id}}" class="btn btn-dark">Editar Post</a>
+                        <div>
+                            <a href="/forum/edit/{{_id}}" class="btn btn-dark">Editar Post</a>
+                        </div>
                         <form action="/forum/delete/{{_id}}" method="POST">
                             <input type="submit" class="btn btn-dark" value="Borrar Post">
                         </form>
