--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,7 +19,8 @@ h1, h2, h3 {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  border: 1px solid red; }
+  border: 1px solid red;
+  object-fit: cover; }
 
 #myMap {
   width: 100%;
@@ -48,7 +49,8 @@ h1, h2, h3 {
   text-decoration: none;
   color: black;
   box-shadow: 0px -25px 107px -56px #8a8a8a;
-  transition: .3s all; }
+  transition: .3s all;
+  padding: 10px; }
   .card p {
     margin: 0; }
 
@@ -107,6 +109,17 @@ figure img {
   height: 100%; }
 
 .taller-pic .taller-personal {
+  width: 300px; }
+
+.button-contact {
+  width: 80%;
+  margin: 0 auto; }
+
+.button-contact input {
+  text-align: center;
+  cursor: pointer; }
+
+.postpic {
   width: 300px; }
 
 /*# sourceMappingURL=style.css.map */
