--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -23,6 +23,7 @@ h1, h2, h3 {
   height: 50px;
   border-radius: 50%;
   border: 1px solid red;
+  object-fit: cover;
 }
 #myMap {
   width: 100%;
@@ -55,6 +56,7 @@ h1, h2, h3 {
   color:black;
   box-shadow: 0px -25px 107px -56px rgba(138, 138, 138, 1);
   transition: .3s all;
+  padding: 10px;
   p{
     margin:0;
   }
@@ -116,4 +118,15 @@ figure img{
 }
 .taller-pic .taller-personal {
   width: 300px;
+}
+.button-contact {
+  width:80%;
+  margin: 0 auto;
+}
+.button-contact input {
+  text-align: center;
+  cursor: pointer;
+}
+.postpic{
+  width:300px;
 }
