add minor changes

--- a/views/cars/cars-detail.hbs
+++ b/views/cars/cars-detail.hbs
@@ -5,16 +5,15 @@
         <figure><img src="{{carImagePath}}"></figure>
         <div class="row">
             <div class="col-md-3">
-                {{!-- <a href="/cars/{{_id}}/edit">Editar lugar</a> --}}
-
+                {{!-- <a href="/cars/{{_id}}/edit">Editar coche</a> --}}
                 <a href="/cars" class="btn btn-dark">Volver</a>
             </div>
-            <div class="col-md-3">
+            {{!-- <div class="col-md-3">
                 <form action="/cars/{{_id}}/delete" method="POST">
                     <button class="btn btn-danger" type="submit">Borrar</a>
                 </form>
 
-            </div>
+            </div> --}}
         </div>
     </div>
 
