--- a/views/cars/cars-list.hbs
+++ b/views/cars/cars-list.hbs
@@ -20,8 +20,8 @@
                     <p><strong>Propietario: </strong> {{creatorId.username}}</p>
 
                     <a class="btn btn-info" href="/cars/{{_id}}/details">Ver</a>
-
-                    {{!-- <a class="btn btn-info" href="/cars/{{_id}}/edit">Editar</a>
+{{!-- 
+                    <a class="btn btn-info" href="/cars/{{_id}}/edit">Editar</a>
                                     |
                                     <form action="/cars/{{_id}}/delete" method="POST">
                                         <button class="btn btn-danger" type="submit">Borrar</a>
