add center mapa

--- a/views/cars/cars-detail.hbs
+++ b/views/cars/cars-detail.hbs
@@ -88,6 +88,7 @@
         </div>
 
     </div>
+    <p id="carId" >{{_id}}</p>
 </div>
 
 
@@ -116,5 +117,6 @@
 {{!-- AXIOS   Y API GOOGLE MAPS    --}}
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/javascripts/mainDetails.js"></script>
-{{!-- <script src="/javascripts/mapStyles.js"> </script> --}}
+<script src="/javascripts/mapStyles.js"> </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5zll-K3WnkRdKTRaRgbyeC_JkL76ygyM"></script>
+{{!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5zll-K3WnkRdKTRaRgbyeC_JkL76ygyM&callback=initMap"></script> --}}
