--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,5 +1,6 @@
 body {
   font-weight: 200;
+  background-color: #eee;
 }
 
 h1, h2, h3 {
@@ -18,6 +19,7 @@ h1, h2, h3 {
   padding: 10px 0;
   margin-top: 5px;
 }
+
 .profile{
   width: 50px;
   height: 50px;
@@ -25,10 +27,12 @@ h1, h2, h3 {
   border: 1px solid red;
   object-fit: cover;
 }
+
 #myMap {
   width: 100%;
   height: 400px;
 }
+
 .old-car{
   width:500px;
   margin: 20px auto;
@@ -41,7 +45,6 @@ h1, h2, h3 {
 }
 .index-view{
   width:100%;
-
   img{
     width: 100%;
     height: 400px;
@@ -50,6 +53,7 @@ h1, h2, h3 {
     border:none;
   }
 }
+
 .card{
   margin: 10px;
   text-decoration: none;
@@ -63,11 +67,13 @@ h1, h2, h3 {
 }
 .card:hover{
   transform: scale(1.01);
+  box-shadow: 0px 0px 50px 0px rgba(155, 155, 155, 1);
   text-decoration: none;
   color:black;
 }
+
 footer{
-  background-color:rgba(138, 138, 138, .5);
+  background-color:rgba(138, 138, 138, .3);
   text-align:center;
   padding: 30px 0;
   margin-top: 50px;
@@ -75,6 +81,7 @@ footer{
 figure img{
   width:100%;
 }
+
 .profile-car-img{
   width: 100%;
   margin: 10px 0;
@@ -107,6 +114,16 @@ figure img{
   justify-content: space-evenly;
   align-items: center;
   margin: 20px;
+  a{
+    background-color:#0097e6;
+    border:none;
+    transition: .3s all;
+    &:hover{
+    background-color:#00a8ff; 
+    transform: scale(1.1); 
+    box-shadow: 0px 0px 10px 0px rgba(155, 155, 155, 1);
+    }
+  }
 }
 .taller-pic{
   text-align:center;
@@ -141,6 +158,64 @@ figure img{
   display: inline-block;
   padding: 5px 20px;
 }
+.cars-edit img{
+  width:100%;
+}
+
+.cars-edit-info{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.cars-edit-info a{
+  display: inline-block;
+  width: 100px;
+}
+
 .volver-details{
-  margin-top: 50px;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  a{
+    margin-top: 25px;
+  }
+}
+.car-view a{
+  display:block;
+  width: 50%;
+  margin: 50px auto;
+  background-color:#e1b12c;
+  border: none;
+  &:hover{
+    background-color:#fbc531;
+  box-shadow: 0px 0px 5px 0px rgba(155, 155, 155, 1);
+
+  }
+}
+
+.car-create{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  a{
+    width:100px;
+  }
+}
+
+.forum-list-button{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 0;
+}
+.forum-list{
+  h2{
+    margin: 10px 0 ;
+  }
+  img{
+    margin: 10px 0;
+  }
+  p{
+    margin: 10px 0;
+  }
 }
