--- a/views/cars/cars-list.hbs
+++ b/views/cars/cars-list.hbs
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row justify-content-center">
             {{#each allCars}}
-                <div class="col-md-8">
+                <div class="col-md-8 car-view card">
 
                     <h3>{{brand}} | {{model}}</h3>
                     <figure class="main-view-car"><img src="{{carImagePath}}"></figure>
