--- a/views/cars/cars-repair.hbs
+++ b/views/cars/cars-repair.hbs
@@ -67,5 +67,5 @@
 
         </div>
     </div>
-    <a href="/cars" class="btn btn-dark">Volver</a>
+    <a href="/cars" class="btn btn-secondary">Volver</a>
 </div>
