--- a/views/cars/cars-create.hbs
+++ b/views/cars/cars-create.hbs
@@ -2,8 +2,10 @@
 
     <div class="row">
 
-        <div class="col-md-6">
+        <div class="col-md-6 car-create">
             <h1 style="font-weight: 100">Nuevo coche en venta</h1>
+            <a href="/cars" class="btn btn-secondary">Volver</a>
+
         </div>
 
         <div class="col-md-6">
@@ -70,8 +72,7 @@
                     <input type="text" name="longitud" id="location" placeholder="longitud">
                 </div>
 
-                <button type="submit" class="btn btn-dark">Crear anuncio</button>
-                <a href="/cars" class="btn btn-dark">Volver</a>
+                <button type="submit" class="btn btn-success">Crear anuncio</button>
 
             </form>
         </div>
