--- a/views/cars/cars-detail.hbs
+++ b/views/cars/cars-detail.hbs
@@ -1,14 +1,14 @@
 <div class="row justify-content-end">
 
-    <div class="col-md-6">
-        <h1 style="font-weight: 100">{{brand}} | {{model}}</h1>
-        <figure><img src="{{carImagePath}}"></figure>
-
-        <div id="myMap"></div>
-
+    <div class="col-md-6 volver-details">
+        <div>
+            <h1 style="font-weight: 100">{{brand}} | {{model}}</h1>
+            <figure><img src="{{carImagePath}}"></figure>
+            <div id="myMap"></div>
+        </div>
         <div class="row">
-            <div class="col-md-3">
-                <a href="/cars" class="btn btn-secondary volver-details">Volver</a>
+            <div class="col-md-3 ">
+                <a href="/cars" class="btn btn-secondary ">Volver</a>
             </div>
         </div>
     </div>
