--- a/views/cars/cars-edit.hbs
+++ b/views/cars/cars-edit.hbs
@@ -2,11 +2,14 @@
 
     <div class="row">
 
-        <div class="col-md-6">
-            <h1 style="font-weight: 100">{{carToEdit.brand}} | {{carToEdit.model}}</h1>
+        <div class="col-md-6 cars-edit-info">
             <div>
-                <img src="{{carToEdit.carImagePath}}" alt="{{carToEdit.brand}}">
+                <h1 style="font-weight: 100">{{carToEdit.brand}} | {{carToEdit.model}}</h1>
+                <div class="cars-edit">
+                    <img src="{{carToEdit.carImagePath}}" alt="{{carToEdit.brand}}">
+                </div>
             </div>
+             <a href="/cars" class="btn btn-secondary">Volver</a>
         </div>
 
         <div class="col-md-6">
@@ -51,7 +54,7 @@
                 </div>
                 <div class="form-group">
                     <label for="state-list">Estado del vehiculo:</label>
-                    <select name="state" class="form-control" id="state-list">
+                    <select name="state" class="form-control form-control-sm" id="state-list">
                         <option value="{{carToEdit.state}}">{{carToEdit.state}}</option>
                         {{#each carState}}
                             <option value="{{this}}">{{this}}</option>
@@ -64,7 +67,7 @@
                 </div>
                 <div class="form-group">
                     <label for="adStatus-list">Estado del anuncio:</label>
-                    <select name="adStatus" class="form-control" id="state-list">
+                    <select name="adStatus" class="form-control form-control-sm" id="state-list">
                         <option value="{{carToEdit.adStatus}}">{{carToEdit.adStatus}}</option>
                         {{#each carAdStatus}}
                             <option value="{{this}}">{{this}}</option>
@@ -77,8 +80,8 @@
                     <input name="longitud" type="text" class="form-control" id="longitud" value="{{carToEdit.location.coordinates.[1]}}">
                 </div>
 
-                <button type="submit" class="btn btn-dark">Modificar anuncio</button>
-                <a href="/cars" class="btn btn-dark">Volver</a>
+                <button type="submit" class="btn btn-success">Modificar anuncio</button>
+               
 
             </form>
         </div>
