add address cars

--- a/views/auth/confirmation.hbs
+++ b/views/auth/confirmation.hbs
@@ -5,3 +5,6 @@
 <h6>Username: {{updatedUser.username}}</h6>
 <h6>Estado: {{updatedUser.status}}</h6>
 <h6>Email: {{updatedUser.email}}</h6> 
+
+
+<a href="/" class="btn btn-dark">Inicio</a>
