--- a/views/cars/cars-detail.hbs
+++ b/views/cars/cars-detail.hbs
@@ -27,11 +27,9 @@
             <p><strong>Kilometros: </strong> {{kilometres}} Km | <strong> Precio: </strong> {{price}}</p>
             <p>Matricula: {{plate}} | Estado del coche: {{state}}</p>
 
-            <h4>Localización</h4>
-            <ul>
-                <li>Latitud: {{location.coordinates.[0]}}</li>
-                <li>Longitud: {{location.coordinates.[1]}}</li>
-            </ul>
+            <h4>Ubicacion</h4>
+            <p>{{location}}</p>
+
                 <div id="myMap"></div>
 
 
