--- a/views/cars/cars-edit.hbs
+++ b/views/cars/cars-edit.hbs
@@ -73,9 +73,8 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="location">Location</label>
-                    <input name="latitud" type="text" class="form-control" id="latitud" value="{{this.location.coordinates.[0]}}">
-                    <input name="longitud" type="text" class="form-control" id="longitud" value="{{this.location.coordinates.[1]}}">
+                    <label for="direction">Location</label>
+                    <input name="location" type="text" class="form-control" id="direction" value="{{this.location}}">
                 </div>
 
                 <button type="submit" class="btn btn-dark">Modificar anuncio</button>
