--- a/views/contact-us.hbs
+++ b/views/contact-us.hbs
@@ -18,3 +18,5 @@
   </div>
   <button type="submit" class="btn btn-secondary btn-lg">Enviar mensaje</button>
 </form>
+
+<a href="/" class="btn btn-dark">Inicio</a>
